Change the default font size of waline to 16px to address the issue of comments being too small

--- a/source/css/comments.css
+++ b/source/css/comments.css
@@ -27,3 +27,8 @@
 .vcontent p {
   color: var(--color-text-a) !important;
 }
+
+
+#waline-comments {
+  --waline-font-size: 16px;
+}
